# honey

./: .gitignore  Cargo.toml  README.md  ideal_program.hon  ideal_program_v2.hon  notes.md  syntax_experimentation.hon  test_file.hon
src/: lib.rs  main.rs
src.old.old/parser/: mod.rs
src.old/codegen/: mod.rs
src.old/codegen/arch/: mod.rs  x86_64.rs
src.old/lexer/: errors.rs  mod.rs  tokens.rs
src.old/lexer_alternative_approach/: mod.rs
src.old/parser/: errors.rs  mod.old.rs  mod.rs  type_test.rs
src.old/syntax/: mod.rs  tokens.rs
src/analysis/: mod.rs
src/analysis/lexical/: mod.rs
src/analysis/semantic/: mod.rs  parser.rs
src/analysis/syntactic/: mod.rs  parser.rs
src/analysis/syntactical/: error.rs  mod.rs
src/codegen/: mod.rs
src/codegen/arch/: mod.rs  x86_64.rs
src/lexer/: error.rs  errors.rs  mod.rs  tokens.rs
src/lexer_alternative_approach/: errors.rs
src/parser/: errors.rs  mod.rs  types.rs
src/parser/sparse/: mod.rs  syntax.rs
src/parser/tests/: mod.rs
src/structures/: parse_tree.rs  tokens.rs
src/syntax/: mod.rs  parse_tree.rs  tokens.rs
