[package]
name = "honey"
about = "A blazingly fast failure of a program."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
lazy_static = "1.4.0"
structopt = { version = "0.3.26" }
